--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         username: ${{ secrets.MAIL_USER }}
         password: ${{ secrets.MAIL_PASS }}
         from: ${{ secrets.MAIL_USER }}
-        to: file://cache/mail_recvs.dat # ${{ secrets.MAIL_RECV }}
+        to: ${{ secrets.MAIL_RECV }}
         subject: 威胁情报播报
         body: test_mail # file://cache/mail_content.dat
         content_type: text/html
